Объединение флагов рана в статус
