# internal/adapter/handler/httpapi/model_convert_project_run_to_ogen.go
@@ -30,9 +30,7 @@ func convertProjectRunToOgen(run entity.ProjectRun) ogenapi.ProjectRun {
 		CreatedAt:  ogenapi.NewOptDateTime(run.CreatedAt),
 		UpdatedAt:  ogenapi.NewOptDateTime(run.UpdatedAt),
 		ProjectID:  ogenapi.NewOptUint(run.ProjectID),
-		Success:    ogenapi.NewOptBool(run.Success),
-		Pending:    ogenapi.NewOptBool(run.Pending),
-		Processing: ogenapi.NewOptBool(run.Processing),
+		Status:     ogenapi.NewOptProjectRunStatus(ogenapi.ProjectRunStatus(run.Status)),
 		FailLog:    ogenapi.NewOptString(run.FailLog),
 		Duration:   ogenapi.NewOptInt64(run.Duration.Milliseconds()),
 		Stages:     ogenapi.NewOptNilProjectRunStageArray(stages),
